Updated agents file